--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
    "homepage": "https://github.com/BPitts8019/node-api1-guided#readme",
    "devDependencies": {
       "nodemon": "^2.0.7"
+   },
+   "dependencies": {
+      "express": "^4.17.1"
    }
 }
